progresso/k8s-manifests/progresso-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: progresso-frontend
  namespace: progresso
  labels:
    app: progresso-frontend
spec:
  replicas: 1 # you can alwyas change it
  selector:
    matchLabels:
      app: progresso-frontend
  template:
    metadata:
      labels:
        app: progresso-frontend
    spec:
      containers:
        - name: progresso-frontend
          image: anaghabharadwaj/progresso-frontend:latest
          ports:
            - containerPort: 80
