progresso/k8s-manifests/progresso-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: progresso-backend-service
  namespace: progresso
spec:
  selector:
    app: progresso-backend
  ports:
    - protocol: TCP
      port: 5000 # Service port
      targetPort: 5000 # Container port
  type: ClusterIP
