progresso/k8s-manifests/progresso-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: progresso-frontend-service
  namespace: progresso
spec:
  selector:
    app: progresso-frontend
  ports:
    - protocol: TCP
      port: 80 # Service port
      targetPort: 80 # Container port
  type: ClusterIP # Internal to the cluster
