progresso/k8s-manifests/progresso-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: progresso-ingress
  namespace: progresso
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: progresso.com # Your application's domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: progresso-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: progresso-backend-service
                port:
                  number: 5000
